finished Admin side mostly

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,14 @@ APP_FAKER_LOCALE=en_US
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
+# Authentication defaults
+AUTH_GUARD=admin
+AUTH_PASSWORD_BROKER=admins
+AUTH_MODEL=App\\Models\\Admin
+AUTH_PASSWORD_RESET_TOKEN_TABLE=admin_password_resets
+
+
+
 # PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
@@ -23,7 +31,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+#DB_DATABASE=C:\Users\Administrator\Documents\Iansoft\myapp2\database\database.sqlite
+
 # DB_USERNAME=root
 # DB_PASSWORD=
 
